# getopt-codegen

./: .gitignore  CMakeLists.txt  README.md  config-file  logconfig.ini  students.xml
example/: Example.xml
exampleProgram/: exampleProgram.xml
include/: CodeGenerator.h  HelpText.h  Justify.h  Logger.h  SourceCodeWriter.h  XMLParser.h
include/models/: Author.h  GetOptSetup.h
include2/: ExampleProgram.h
src/: CodeGenerator.cpp  CodeGenerator.h  HelpText.cpp  HelpText.h  Justify.cpp  Justify.h  Logger.cpp  Logger.h  SourceCodeWriter.cpp  SourceCodeWriter.h  StateMachine.cpp  StateMachine.h  XMLParser.cpp  XMLParser.h
src/headerFiles/: CodeGenerator.h  HelpText.h  Justify.h  SourceCodeWriter.h  XMLParser.h
src/models/: Author.cpp  Author.h  GetOptSetup.cpp  GetOptSetup.h  Option.cpp  Option.h
src/models/headerFiles/: GetOptSetup.h  Option.h
src/models/sourceFiles/: Author.cpp  GetOptSetup.cpp  Option.cpp
src/sourceFiles/: CodeGenerator.cpp  HelpText.cpp  Justify.cpp  SourceCodeWriter.cpp  StateMachine.cpp  XMLParser.cpp
src2/: COptionParser.cpp  COptionParser.h  ExampleProgram.cpp  ExtendedGeneratedCode.cpp  constStrings.cpp  exampleProgram.xml
src3/: ExampleProgram.cpp  ExampleProgram.h  ExtendedGeneratedCode.cpp  ExtendedGeneratedCode.h  exampleProgram.xml
src3/headerFiles/: ExampleProgram.h  ExtendedGeneratedCode.h
src3/sourceFiles/: ExampleProgram.cpp  ExtendedGeneratedCode.cpp
